Dark mode fixes
1) Updated stylesheets of CSS frameworks to check for html[data-theme="dark"] instead of user preferences, so that the toggle button can work properly. 2) Updated style-settings.js so that the toggle button is hidden when  framework == "No CSS".

--- a/css/mvp.css
+++ b/css/mvp.css
@@ -26,19 +26,19 @@
   --width-content: 1080px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root[color-mode="user"] {
-    --color-accent: #0097fc4f;
-    --color-bg: #333;
-    --color-bg-secondary: #555;
-    --color-link: #0097fc;
-    --color-secondary: #e20de9;
-    --color-secondary-accent: #e20de94f;
-    --color-shadow: #bbbbbb20;
-    --color-table: #0097fc;
-    --color-text: #f7f7f7;
-    --color-text-secondary: #aaa;
-  }
+/* @media (prefers-color-scheme: dark) {
+  :root[color-mode="user"] { */
+html[data-theme="dark"] {
+  --color-accent: #0097fc4f;
+  --color-bg: #333;
+  --color-bg-secondary: #555;
+  --color-link: #0097fc;
+  --color-secondary: #e20de9;
+  --color-secondary-accent: #e20de94f;
+  --color-shadow: #bbbbbb20;
+  --color-table: #0097fc;
+  --color-text: #f7f7f7;
+  --color-text-secondary: #aaa;
 }
 
 html {
